# blossom

./: .gitignore  README.md  pyproject.toml
backend/: analysis.py  main.py  pyproject.toml  requirements.txt  sample_data.json  utils.py
backend/bloom/: hello.py  pyproject.toml
backend/data/: animals.json  cars.json
backend/misc/: convert_numbered_list_to_json.py
frontend/: pyproject.toml
frontend/CustomBlossomClasses/: 0_menu.ts  1_experiment.ts  2_resizable_experiment.ts  3_throwable_experiment.ts  4_thrown_object_trajectory.ts  5_static_cluster.ts  6_dynamic_cluster_trajectory.ts  PhysicsEngine.ts
frontend/Fetch/: Fetch.esproj  README.md
frontend/Fetch/Assets/: Scene.scene
frontend/Fetch/Assets/LSTween/: LSTween.ts  RotationInterpolationType.ts  package.native
frontend/Fetch/Assets/Materials/: 9_Slicing_Material.mat  9_Slicing_Material.ss_graph  HintMaterial.mat  Occluder.mat
frontend/Fetch/Assets/Scripts/: Animation State Manager.lsc  CatFactAnimator.ts  Events.ts  FetchBlossomData.ts  FetchCatFacts.ts
frontend/Fetch/Assets/SpectaclesInteractionKit/: package.native
frontend/Fetch/Assets/Textures/: Hint_Tap.lensanim
frontend/Fetch/Assets/Unit Sphere/: Unit_Sphere__PLACE_IN_OBJECTS_PANEL.prefab
frontend/makeballs/: makeballs.esproj  tsconfig.json
frontend/makeballs/Assets/: Scene.scene  Setup.ts  [Manipulate Example] Box.prefab
frontend/makeballs/Assets/Unit Sphere/: Unit_Sphere__PLACE_IN_OBJECTS_PANEL.prefab
frontend/makeballs/Cache/Asset Preview/: .gitignore  Asset Preview Template.esproj
frontend/makeballs/PluginsUserPreferences/: Snap_Plugin_Core_UserLogCollectorService.yaml  Snap_Plugin_Gui_AssetBrowser_cd11ace2-8507-4965-a068-d85c26031a6b.yaml  Snap_Plugin_Gui_InspectorPanel_780d9164-e681-4de1-b586-5213ed5523b9.yaml
frontend/makeballs/Support/: StudioLib.d.ts
frontend/makeballs/Workspaces/: WorkspacesState.yaml
frontend/makeballs/Workspaces/My Workspace/: Layout.yaml  Snap_Plugin_Gui_PreviewPanel_52fc2a95-41a3-427b-a138-1e00eb1c405e.yaml  Snap_Plugin_Gui_SceneHierarchyEditor_6778142c-0629-4c2a-afc3-92a65ce29e1a.yaml
frontend/prototype_1/: Blossom.esproj  README.md  TennisBall_Importable.lspkg  ThrowLab.esproj  prototype_1.esproj
frontend/prototype_1/Assets/: Big.mat  BigCircle.mat  ButtonManager.prefab  Countdown.lsc  Events.ts  Evidence.mat  Grabbable.prefab  Grabbable.ts  Horizontal Layout.lsc  IdeaPhysics.ts  Image.mat  ImageMaterial.mat  Layout Element.lsc  MainDashboardUI.prefab  Mesh.prefab  PBR 2.mat  PBR 3.mat  PBR 4.mat  PBR.mat  Physics Matter.matter  Physics World Settings.worldSettings  PhysicsPrefab1.prefab  PhysicsPrefab2.prefab  PhysicsPrefab3.prefab  PhysicsPrefab4.prefab  PhysicsPrefab5.prefab  PhysicsPrefab6.prefab  PhysicsPrefab7.prefab  PhysicsPrefab8.prefab  PhysicsPrefab9.prefab  Scene.scene  Slider.lsc  Text.prefab  UI Button.lsc  UI Color Picker.lsc  UI Discrete Picker.lsc  UI Panel.lsc  UI Scroll View.lsc  UI Toggle.lsc  Vertical Layout.lsc  (+4 more)
frontend/prototype_1/Assets/3D Texture Noise Pack/: 3DTextureViewer__PLACE_IN_OBJECTS_PANEL.prefab
frontend/prototype_1/Assets/AssetDart/: SceneHierarchy.prefab
frontend/prototype_1/Assets/Attraction Force/: Attraction Force.prefab  WorldSettingsAsset1.worldSettings
frontend/prototype_1/Assets/Bloom Post Effect/: Bloom Post Effect.prefab
frontend/prototype_1/Assets/Board/: SceneHierarchy.prefab
frontend/prototype_1/Assets/Bubble Soap Particles/: Bubble_Particles_DRAG_ME.prefab
frontend/prototype_1/Assets/Cinematic Glow/: Cinematic Glow.prefab
frontend/prototype_1/Assets/Double Sided Glass/: Double_Sided_Glass__PLACE_IN_OBJECTS_PANEL.prefab
frontend/prototype_1/Assets/Galaxy VFX/: Galaxy__PLACE_IN_OBJECTS_PANEL.prefab
frontend/prototype_1/Assets/Gem Material/: Gem Material.mat  Gem Material.ss_graph  Screen Texture.screenTexture
frontend/prototype_1/Assets/Gold/: Gold.mat
frontend/prototype_1/Assets/Graph Uber PBR/: Uber PBR.mat
(+1620 files in other folders)
