[project]
name = "blossom"
version = "0.1.0"
description = "Blossom Project Root"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
]

[tool.uv.scripts]
start = "uvicorn app.main:app --reload"
test = "pytest tests/ --cov=app"
format = { composite = ["black .", "isort .", "ruff check --fix ."] }

[tool.uv.workspace]
members = ["backend/bloom"]

# Shared tool configurations that will be inherited by subprojects
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
