[project]
name = "blossom-frontend"
version = "0.1.0"
description = "Blossom Frontend Service"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
]

[tool.uv.scripts]
test = "pytest tests/"
format = { composite = ["black .", "isort .", "ruff check --fix ."] }
e2e = "pytest tests/e2e/ --headed"
install-browsers = "playwright install" 